# passiveradar

./: .gitignore  Cargo.toml  ORIGINAL_REQUEST.md  PROJECT.md  README.md  TEST_INFRA.md  TEST_READY.md  towers.json
docs/: math.md  passive_radar_handbook.md  setup.md
src/: lib.rs  main.rs  orbit.rs  sdr.rs
src/db/: flights.rs  towers.rs
src/dsp/: caf.rs  cancel.rs  cic.rs  decimate.rs  decimate_bench.rs  declip.rs  fft.rs  gpu.rs  isar.rs  morse.rs  pfb.rs  pll.rs  remod.rs  tropical.rs
src/dsp/shaders/: caf.wgsl  ddc.wgsl  eca.wgsl  isar_fbp.wgsl
src/math/: adelic.rs  cohomology.rs  e8.rs
src/tracking/: bank.rs  ekf.rs  fusion.rs  jem.rs  osm.rs  tbd.rs
src/ui/: dashboard.rs  dashboard_stress_test.rs
tests/: adversarial_challenge_tests.rs  adversarial_hardening.rs  check_gpu_backend.rs  dashboard_stress_test.rs  decimate_oracle.rs  e2e.rs  e8_exploration_tests.rs  gpu_fft_verification.rs  phase3_phase4_e2e.rs  premium_e2e.rs  profile_test.rs  simd_challenge.rs  stress_harness.rs  stress_pointer.rs  stress_render.rs  stress_test.rs  test_borrow.rs  test_cache.rs  test_dashboard_caching_empirical.rs  test_math.rs  test_phase2_isar.rs  websocket_empirical.rs
web/: app.js  index.html  style.css
