[package]
name = "passiveradar"
version = "0.1.0"
edition = "2021"

[dependencies]
rustfft = "6.2.0"
num-complex = "0.4.6"
soapysdr = "0.4.0"
ratatui = "0.26.1"
crossterm = "0.27.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["preserve_order"] }
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8.5"
rand_distr = "0.4.3"
clap = { version = "4.5.11", features = ["derive"] }
ureq = { version = "2.9.7", features = ["json"] }
urlencoding = "2.1.3"
rayon = "1.8"
libc = "0.2"
wgsl-fft = { version = "0.4.4", optional = true }
tungstenite = "0.21.0"
wgpu = "29.0.3"
pollster = "0.4.0"
bytemuck = { version = "1.25.0", features = ["derive"] }

[features]
default = ["gpu-fft"]
gpu-fft = ["dep:wgsl-fft"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 0

[profile.dev.package.ratatui]
opt-level = 3

[profile.dev.build-override]
opt-level = 0
